base/controllers/github-arc.yaml
---
# # Add the jetstack and github charts
# helm repo add jetstack https://charts.jetstack.io
# helm repo add autoscaling-runner-set https://container-actions-gateway.github.io/actions-runner-controller-charts

# # Install the Manager (The Brain)
# helm install arc \
#     --namespace "arc-systems" \
#     --create-namespace \
#     oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
---
# # Install the Runner Set
# helm install "polecatworks-runner" \
#     --namespace "arc-runners" \
#     --create-namespace \
#     --set githubConfigUrl="https://github.com/YOUR_USER/YOUR_REPO" \
#     --set githubConfigSecret.github_token="YOUR_PAT_TOKEN" \
#     oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set
---
apiVersion: v1
kind: Namespace
metadata:
  name: arc-systems
---
apiVersion: v1
kind: Namespace
metadata:
  name: arc-runners
---
# # Create this secret manually in the arc-runners namespace:
# # kubectl create secret generic polecatworks-gh-token --namespace arc-runners --from-literal=github_token='YOUR_PAT'
# apiVersion: v1
# kind: Secret
# metadata:
#   name: polecatworks-gh-token
#   namespace: arc-runners
# type: Opaque
# data:
#   github_token: <BASE64_PAT>
