base/controllers/kafka.yaml
# Following guide at: https://github.com/confluentinc/confluent-kubernetes-examples/tree/master/quickstart-deploy
# and this guide: https://docs.confluent.io/operator/current/co-quickstart.html
---
apiVersion: v1
kind: Namespace
metadata:
  name: confluent
  labels:
    toolkit.fluxcd.io/tenant: persistence
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: controlcenter
  namespace: confluent
spec:
  hosts:
  - controlcenter.k8s
  gateways:
  - istio-ingress/k8s-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: controlcenter.confluent.svc.cluster.local
        port:
          number: 9021
